--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "wiki-cuisines-correlation-matrix"
+name = "wiki-cuisines-correlation-heatmap"
 version = "0.1.0"
 description = ""
 authors = ["Alberto Santagostino"]
@@ -11,6 +11,9 @@ beautifulsoup4 = "^4.9.1"
 pandas = "^1.1.1"
 seaborn = "^0.10.1"
 tqdm = "^4.48.2"
+numpy = "^1.19.2"
+matplotlib = "^3.3.1"
+plotly = "^4.10.0"
 
 [tool.poetry.dev-dependencies]
 ipdb = "^0.13.3"
