--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ tqdm = "^4.48.2"
 numpy = "^1.19.2"
 matplotlib = "^3.3.1"
 plotly = "^4.10.0"
+emoji = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 ipdb = "^0.13.3"
