--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ tqdm = "^4.48.2"
 numpy = "^1.19.2"
 plotly = "^4.10.0"
 emoji = "^0.6.0"
+psutil = "^5.7.2"
+kaleido = "^0.0.3"
 
 [tool.poetry.dev-dependencies]
 ipdb = "^0.13.3"
