--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ plotly = "^4.10.0"
 emoji = "^0.6.0"
 psutil = "^5.7.2"
 kaleido = "^0.0.3"
+tabulate = "^0.8.7"
 
 [tool.poetry.dev-dependencies]
 ipdb = "^0.13.3"
