--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ authors = ["Alberto Santagostino"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-wikipedia = "^1.4.0"
 beautifulsoup4 = "^4.9.1"
 pandas = "^1.1.1"
 tqdm = "^4.48.2"
@@ -16,6 +15,7 @@ emoji = "^0.6.0"
 psutil = "^5.7.2"
 kaleido = "^0.0.3"
 tabulate = "^0.8.7"
+requests = "^2.24.0"
 
 [tool.poetry.dev-dependencies]
 ipdb = "^0.13.3"
